--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,7 @@
 		%sveltekit.head%
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
 		<link rel="stylesheet" href="%sveltekit.assets%/global.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One|Libre+Baskerville|Merriweather|Open+Sans">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
