--- a/src/app.html
+++ b/src/app.html
@@ -7,8 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+		<link rel="stylesheet" href="./node_modules/lineicons/assets/icon-fonts/lineicons.css" />
 		<link rel="stylesheet" href="%sveltekit.assets%/global.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One|Libre+Baskerville|Merriweather|Open+Sans">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One|Libre+Baskerville|Merriweather|Open+Sans|Raleway">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
